--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:id="@+id/nav_info"
+        android:icon="@drawable/baseline_info"
+        android:title="Información">
+    </item>
     <item android:id="@+id/nav_person"
         android:icon="@drawable/baseline_person_add"
         android:title="Clientes">
